--- a/appvibrateplayaudiosounds/src/main/res/layout/activity_select_audio.xml
+++ b/appvibrateplayaudiosounds/src/main/res/layout/activity_select_audio.xml
@@ -8,9 +8,10 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="yoy.vibrateplayaudiosounds.SelectAudioActivity">
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="vibrate"
+            android:onClick="btn_onClick"/>
 
 </RelativeLayout>
