--- a/appvibrateplayaudiosounds/src/main/res/layout/activity_select_audio.xml
+++ b/appvibrateplayaudiosounds/src/main/res/layout/activity_select_audio.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,4 +14,10 @@
             android:text="vibrate"
             android:onClick="btn_onClick"/>
 
-</RelativeLayout>
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="stop"
+            android:onClick="btnStop_onClick"/>
+
+</LinearLayout>
